feat: use List.of to create unmodifiable lists